--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1710,6 +1710,18 @@ section.lazy-placeholder:after {
 .cid-rFxlvxkQnf .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-rFWK7wonud {
+  background: #ffffff;
+}
+.cid-rFWK7wonud .video-block {
+  margin: auto;
+  width: 100% !important;
+}
+@media (max-width: 768px) {
+  .cid-rFWK7wonud .video-block {
+    width: 100% !important;
+  }
+}
 .cid-rFxNfc1jiS .navbar {
   padding: .5rem 0;
   background: #333333;
