create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2122,6 +2122,56 @@ section.lazy-placeholder:after {
 .cid-rFxNZja1Zu .mbr-text {
   color: #767676;
 }
+.cid-rFWN2kVda3 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background: #232323;
+}
+.cid-rFWN2kVda3 .images-container.container-fluid {
+  padding: 0;
+}
+.cid-rFWN2kVda3 .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+  -webkit-align-items: stretch;
+}
+.cid-rFWN2kVda3 .media-container-row .img-item {
+  display: -webkit-flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: center;
+}
+.cid-rFWN2kVda3 .media-container-row .img-item img {
+  width: 100%;
+  min-height: 1px;
+}
+.cid-rFWN2kVda3 .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-rFWN2kVda3 .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-rFWN2kVda3 .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-rFWN2kVda3 .img-item {
+    width: 100% !important;
+  }
+  .cid-rFWN2kVda3 .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+    -webkit-flex-basis: initial !important;
+  }
+}
 .cid-rFJLuyl5v1 {
   background: #efefef;
   padding-top: 45px;
