--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2877,7 +2877,7 @@ section.lazy-placeholder:after {
 .cid-rFznVGDtsu {
   padding-top: 120px;
   padding-bottom: 90px;
-  background-color: #c1c1c1;
+  background-image: url("../../../assets/images/thumbnail-sven-maurits-1920x1080.jpeg");
 }
 .cid-rFznVGDtsu .mbr-section-subtitle {
   color: #767676;
@@ -3473,53 +3473,6 @@ section.lazy-placeholder:after {
 .cid-rFzmbLBLs5 .media-container-row .row-copirayt p {
   width: 100%;
 }
-.cid-rFzmgm61cE {
-  padding-top: 120px;
-  padding-bottom: 120px;
-  background-image: url("../../../assets/images/thumbnail-sven-maurits-1920x1080.jpeg");
-}
-.cid-rFzmgm61cE .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-rFzmgm61cE .media-row {
-  display: -webkit-flex;
-  justify-content: center;
-  -webkit-justify-content: center;
-}
-.cid-rFzmgm61cE .team-item {
-  transition: all .2s;
-  margin-bottom: 2rem;
-}
-.cid-rFzmgm61cE .team-item .item-image img {
-  width: 100%;
-}
-.cid-rFzmgm61cE .team-item .item-name p {
-  margin-bottom: 0;
-}
-.cid-rFzmgm61cE .team-item .item-role p {
-  margin-bottom: 0;
-}
-.cid-rFzmgm61cE .team-item .item-social {
-  display: -webkit-flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  -webkit-flex-wrap: wrap;
-  -webkit-justify-content: center;
-}
-.cid-rFzmgm61cE .team-item .item-social .socicon {
-  color: #232323;
-  font-size: 17px;
-}
-.cid-rFzmgm61cE .team-item .item-caption {
-  background: #efefef;
-}
-.cid-rFzmgm61cE H2 {
-  color: #ffffff;
-  text-align: left;
-}
-.cid-rFzmgm61cE .item-name {
-  color: #b1a374;
-}
 .cid-rFzmgmJ2Cv .navbar {
   padding: .5rem 0;
   background: #333333;
@@ -3918,6 +3871,100 @@ section.lazy-placeholder:after {
 .cid-rFzmgmJ2Cv .nav-link:hover,
 .cid-rFzmgmJ2Cv .dropdown-item:hover {
   color: #b1a374 !important;
+}
+.cid-rHPEZ9a7mJ {
+  padding-top: 0px;
+  padding-bottom: 120px;
+  background-image: url("../../../assets/images/thumbnail-sven-maurits-1920x1080.jpeg");
+}
+.cid-rHPEZ9a7mJ .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rHPEZ9a7mJ .media-row {
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-rHPEZ9a7mJ .team-item {
+  transition: all .2s;
+  margin-bottom: 2rem;
+}
+.cid-rHPEZ9a7mJ .team-item .item-image img {
+  width: 100%;
+}
+.cid-rHPEZ9a7mJ .team-item .item-name p {
+  margin-bottom: 0;
+}
+.cid-rHPEZ9a7mJ .team-item .item-role p {
+  margin-bottom: 0;
+}
+.cid-rHPEZ9a7mJ .team-item .item-social {
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  -webkit-justify-content: center;
+}
+.cid-rHPEZ9a7mJ .team-item .item-social .socicon {
+  color: #232323;
+  font-size: 17px;
+}
+.cid-rHPEZ9a7mJ .team-item .item-caption {
+  background: #b1a374;
+}
+.cid-rHPEZ9a7mJ H2 {
+  color: #ffffff;
+  text-align: left;
+}
+.cid-rHPEZ9a7mJ .item-name {
+  color: #ffffff;
+}
+.cid-rHPFsf8Lng {
+  padding-top: 0px;
+  padding-bottom: 120px;
+  background-color: #b1a374;
+}
+.cid-rHPFsf8Lng .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rHPFsf8Lng .media-row {
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-rHPFsf8Lng .team-item {
+  transition: all .2s;
+  margin-bottom: 2rem;
+}
+.cid-rHPFsf8Lng .team-item .item-image img {
+  width: 100%;
+}
+.cid-rHPFsf8Lng .team-item .item-name p {
+  margin-bottom: 0;
+}
+.cid-rHPFsf8Lng .team-item .item-role p {
+  margin-bottom: 0;
+}
+.cid-rHPFsf8Lng .team-item .item-social {
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  -webkit-justify-content: center;
+}
+.cid-rHPFsf8Lng .team-item .item-social .socicon {
+  color: #232323;
+  font-size: 17px;
+}
+.cid-rHPFsf8Lng .team-item .item-caption {
+  background: #232323;
+}
+.cid-rHPFsf8Lng H2 {
+  color: #ffffff;
+  text-align: left;
+}
+.cid-rHPFsf8Lng .item-name {
+  color: #ffffff;
 }
 .cid-rFzmgmZ5BV {
   padding-top: 30px;
