--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2116,30 +2116,32 @@ section.lazy-placeholder:after {
 }
 .cid-rFxNZja1Zu {
   padding-top: 60px;
-  padding-bottom: 60px;
+  padding-bottom: 0px;
   background-color: #232323;
 }
 .cid-rFxNZja1Zu .mbr-text {
   color: #767676;
 }
-.cid-rPs71WEj6K {
+.cid-rPKMF1hsT4 {
   background: #ffffff;
-  padding-top: 0px;
-  padding-bottom: 0px;
 }
-.cid-rPs71WEj6K .image-block {
+.cid-rPKMF1hsT4 .image-block {
   margin: auto;
+  width: 100% !important;
 }
-.cid-rPs71WEj6K figcaption {
+.cid-rPKMF1hsT4 .mbr-figure {
+  margin: 0 auto;
+}
+.cid-rPKMF1hsT4 figcaption {
   position: relative;
 }
-.cid-rPs71WEj6K figcaption div {
+.cid-rPKMF1hsT4 figcaption div {
   position: absolute;
   bottom: 0;
   width: 100%;
 }
 @media (max-width: 768px) {
-  .cid-rPs71WEj6K .image-block {
+  .cid-rPKMF1hsT4 .image-block {
     width: 100% !important;
   }
 }
@@ -3931,7 +3933,7 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-rHPFsf8Lng {
-  padding-top: 0px;
+  padding-top: 30px;
   padding-bottom: 120px;
   background-color: #b1a374;
 }
@@ -4614,5 +4616,644 @@ section.lazy-placeholder:after {
   width: 100%;
 }
 .cid-rFzmin70vW .media-container-row .row-copirayt p {
+  width: 100%;
+}
+.cid-rPtSX7o3lf .navbar {
+  padding: .5rem 0;
+  background: #333333;
+  transition: none;
+  min-height: 77px;
+}
+.cid-rPtSX7o3lf .navbar-dropdown.bg-color.transparent.opened {
+  background: #333333;
+}
+.cid-rPtSX7o3lf a {
+  font-style: normal;
+}
+.cid-rPtSX7o3lf .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rPtSX7o3lf .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rPtSX7o3lf .nav-item:focus,
+.cid-rPtSX7o3lf .nav-link:focus {
+  outline: none;
+}
+.cid-rPtSX7o3lf .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rPtSX7o3lf .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rPtSX7o3lf .menu-logo {
+  margin-right: auto;
+}
+.cid-rPtSX7o3lf .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rPtSX7o3lf .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rPtSX7o3lf .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rPtSX7o3lf .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rPtSX7o3lf .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-rPtSX7o3lf .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rPtSX7o3lf .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-rPtSX7o3lf .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rPtSX7o3lf .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rPtSX7o3lf .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rPtSX7o3lf .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rPtSX7o3lf .dropdown .dropdown-menu {
+  background: #333333;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rPtSX7o3lf .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rPtSX7o3lf .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rPtSX7o3lf .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rPtSX7o3lf .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rPtSX7o3lf .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rPtSX7o3lf .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rPtSX7o3lf .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rPtSX7o3lf .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rPtSX7o3lf .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rPtSX7o3lf .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rPtSX7o3lf .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rPtSX7o3lf button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rPtSX7o3lf button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rPtSX7o3lf button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-rPtSX7o3lf button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rPtSX7o3lf button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rPtSX7o3lf button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rPtSX7o3lf button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rPtSX7o3lf nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rPtSX7o3lf nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rPtSX7o3lf nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rPtSX7o3lf nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rPtSX7o3lf .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rPtSX7o3lf .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-rPtSX7o3lf .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rPtSX7o3lf .collapsed .navbar-collapse.collapsing,
+.cid-rPtSX7o3lf .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rPtSX7o3lf .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rPtSX7o3lf .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rPtSX7o3lf .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rPtSX7o3lf .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rPtSX7o3lf .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rPtSX7o3lf .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rPtSX7o3lf .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rPtSX7o3lf .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+@media (min-width: 1024px) {
+  .cid-rPtSX7o3lf .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 7rem);
+  }
+}
+.cid-rPtSX7o3lf .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rPtSX7o3lf .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rPtSX7o3lf .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rPtSX7o3lf .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  overflow: hidden;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rPtSX7o3lf .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rPtSX7o3lf .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rPtSX7o3lf .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 1023px) {
+  .cid-rPtSX7o3lf .navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rPtSX7o3lf img {
+    height: 3.8rem !important;
+  }
+  .cid-rPtSX7o3lf .btn {
+    display: -webkit-flex;
+  }
+  .cid-rPtSX7o3lf button.navbar-toggler {
+    display: block;
+  }
+  .cid-rPtSX7o3lf .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rPtSX7o3lf .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rPtSX7o3lf .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rPtSX7o3lf .navbar-collapse.collapsing,
+  .cid-rPtSX7o3lf .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rPtSX7o3lf .navbar-collapse.collapsing .navbar-nav,
+  .cid-rPtSX7o3lf .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rPtSX7o3lf .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rPtSX7o3lf .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rPtSX7o3lf .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rPtSX7o3lf .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rPtSX7o3lf .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rPtSX7o3lf .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rPtSX7o3lf .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    overflow: hidden;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rPtSX7o3lf .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rPtSX7o3lf .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rPtSX7o3lf .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rPtSX7o3lf .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-rPtSX7o3lf .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-rPtSX7o3lf .nav-link:hover,
+.cid-rPtSX7o3lf .dropdown-item:hover {
+  color: #b1a374 !important;
+}
+.cid-rPtSX7YpAG {
+  padding-top: 105px;
+  padding-bottom: 90px;
+  background-color: #073b4c;
+}
+.cid-rPtUAOcF9i {
+  padding-top: 30px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rPtUAOcF9i h3 {
+  text-align: center;
+}
+.cid-rPtUAOcF9i .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-rPtUAOcF9i .mbr-content-text {
+  color: #767676;
+}
+.cid-rPtUAOcF9i .panel-item {
+  background: #ffffff;
+}
+.cid-rPtUAOcF9i .card {
+  word-wrap: break-word;
+}
+.cid-rPtUAOcF9i .mbr-iconfont {
+  font-size: 80px;
+  color: #149dcc;
+}
+.cid-rPtVCTiFj9 {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rPtVCTiFj9 .counter-container {
+  color: #767676;
+}
+.cid-rPtVCTiFj9 .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-rPtVCTiFj9 .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-rPtVCTiFj9 .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+}
+.cid-rPtVCTiFj9 .counter-container ol li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.cid-rPtVIFehlC {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-rPtVIFehlC .card-box {
+  padding: 0 2rem;
+}
+.cid-rPtVIFehlC .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-rPtVIFehlC .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-rPtVIFehlC h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-rPtVIFehlC p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-rPtVIFehlC .mbr-text {
+  color: #767676;
+}
+.cid-rPtVIFehlC .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rPtVIFehlC .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-rPtVXteohl {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-rPtVXteohl .pricing {
+  padding: 3.3rem;
+  color: #767676;
+  background-color: #fff;
+}
+@media (max-width: 767px) {
+  .cid-rPtVXteohl .pricing {
+    padding: 1.5rem;
+  }
+}
+.cid-rPtVXteohl .plan-header,
+.cid-rPtVXteohl .plan-body {
+  background-color: #fff;
+}
+.cid-rPtVXteohl .plan-title {
+  margin-top: 1.4rem;
+}
+.cid-rPtVXteohl .price-figure {
+  font-weight: 700;
+  color: #232323;
+}
+@media (max-width: 550px) {
+  .cid-rPtVXteohl .price-figure {
+    font-size: 4.25rem;
+  }
+}
+.cid-rPtVXteohl .price-value {
+  font-weight: 700;
+  vertical-align: top;
+}
+.cid-rPtVXteohl hr {
+  margin: 2rem 0;
+}
+.cid-rPtU2ogz5g {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rPtU2ogz5g .mbr-text {
+  color: #767676;
+}
+.cid-rPtU2ogz5g h4 {
+  text-align: center;
+}
+.cid-rPtU2ogz5g p {
+  text-align: center;
+}
+.cid-rPtU2ogz5g .card-img span {
+  font-size: 96px;
+  color: #149dcc;
+}
+.cid-rPtSXaEBpi {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  background-color: #2e2e2e;
+}
+.cid-rPtSXaEBpi .row-links {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rPtSXaEBpi .social-row {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rPtSXaEBpi .media-container-row {
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rPtSXaEBpi .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-rPtSXaEBpi .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-rPtSXaEBpi .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-rPtSXaEBpi .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-rPtSXaEBpi .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-rPtSXaEBpi .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rPtSXaEBpi .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rPtSXaEBpi .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rPtSXaEBpi .media-container-row .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-rPtSXaEBpi .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-rPtSXaEBpi .media-container-row .row-copirayt p {
   width: 100%;
 }
