create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4476,11 +4476,11 @@ section.lazy-placeholder:after {
 }
 .cid-rHPEZ9a7mJ {
   padding-top: 0px;
-  padding-bottom: 120px;
+  padding-bottom: 75px;
   background-image: url("../../../assets/images/thumbnail-sven-maurits-1920x1080.jpeg");
 }
 .cid-rHPEZ9a7mJ .mbr-section-subtitle {
-  color: #767676;
+  color: #efefef;
 }
 .cid-rHPEZ9a7mJ .media-row {
   display: -webkit-flex;
@@ -4522,8 +4522,8 @@ section.lazy-placeholder:after {
   color: #ffffff;
 }
 .cid-rHPFsf8Lng {
-  padding-top: 30px;
-  padding-bottom: 120px;
+  padding-top: 15px;
+  padding-bottom: 60px;
   background-color: #b1a374;
 }
 .cid-rHPFsf8Lng .mbr-section-subtitle {
