create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4775,6 +4775,54 @@ section.lazy-placeholder:after {
 .cid-rHPFsf8Lng .item-name {
   color: #ffffff;
 }
+.cid-rQk20x2g29 {
+  padding-top: 90px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rQk20x2g29 .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rQk20x2g29 .formoid {
+  margin: auto;
+}
+.cid-rQk20x2g29 .form-control {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+.cid-rQk20x2g29 .input-group-btn .btn {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin: 0 !important;
+}
+.cid-rQk20x2g29 a:not([href]):not([tabindex]) {
+  color: #fff;
+}
+.cid-rQk20x2g29 a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+@media (max-width: 768px) {
+  .cid-rQk20x2g29 .mbr-form .row {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  .cid-rQk20x2g29 .form-group,
+  .cid-rQk20x2g29 .input-group-btn,
+  .cid-rQk20x2g29 .input-group-btn .btn {
+    max-width: 300px;
+    width: 100%;
+  }
+}
+@media (min-width: 769px) {
+  .cid-rQk20x2g29 .mbr-form .row > * {
+    padding: 0 0.5rem;
+  }
+}
+.cid-rQk20x2g29 H2 {
+  color: #b1a374;
+}
 .cid-rFzmgmZ5BV {
   padding-top: 120px;
   padding-bottom: 0px;
