--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2599,7 +2599,7 @@ section.lazy-placeholder:after {
 }
 .cid-rQok0LxEH4 {
   padding-top: 60px;
-  padding-bottom: 90px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-rQok0LxEH4 h3 {
@@ -2635,6 +2635,46 @@ section.lazy-placeholder:after {
   color: #b1a374;
 }
 .cid-rQok0LxEH4 H4 {
+  color: #cccccc;
+}
+.cid-rQq4BRcy2k {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-rQq4BRcy2k h3 {
+  text-align: center;
+  font-weight: 300;
+}
+.cid-rQq4BRcy2k .wrap {
+  width: 150px;
+  height: 150px;
+  margin: 0 auto;
+}
+.cid-rQq4BRcy2k .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rQq4BRcy2k .card {
+  -webkit-flex-basis: 100%;
+  flex-basis: 100%;
+  word-wrap: break-word;
+}
+.cid-rQq4BRcy2k ellipse {
+  stroke: rgba(206, 206, 206, 0.4);
+}
+.cid-rQq4BRcy2k path {
+  stroke: #55b4d4;
+}
+@media (max-width: 991px) and (min-width: 768px) {
+  .cid-rQq4BRcy2k .card {
+    -webkit-flex-basis: 33%;
+    flex-basis: 33%;
+  }
+}
+.cid-rQq4BRcy2k .mbr-section-title {
+  color: #149dcc;
+}
+.cid-rQq4BRcy2k H4 {
   color: #cccccc;
 }
 .cid-rPL04vLRyD {
